Renamed *_parachute_path_* instances to be more clear
- fast_parachute_path -> short_parachute_path
- slow_parachute_path -> long_parachute_path
- Renamed map.jpg -> map.jpeg

--- a/config.json
+++ b/config.json
@@ -1,22 +1,22 @@
 {
-	"admins":						["Username#3716"],
-	"activation_str":				"|",
-	"description":					"PUBG plane tracking bot for Discord (Alpha)\nVisit https://github.com/naschorr/plane-pal",
-	"debug_level":					1,
-	"token_file":					"token.json",
-	"_token_file_path":				"",
-	"resources_folder":				"resources",
-	"_resources_folder_path":		"",
-	"map_file":						"map.jpg",
-	"_map_file_path":				"",
-	"map_file_extension":			"jpeg",
+	"admins":							["Username#1234"],
+	"activation_str":					"|",
+	"description":						"PUBG plane tracking bot for Discord (Alpha)\nVisit https://github.com/naschorr/plane-pal",
+	"debug_level":						1,
+	"token_file":						"token.json",
+	"_token_file_path":					"",
+	"resources_folder":					"resources",
+	"_resources_folder_path":			"",
+	"map_file":							"map.jpeg",
+	"_map_file_path":					"",
+	"map_file_extension":				"jpeg",
 
-	"path_command_help":			"Usage: |path (Grid X marker)(Grid Y marker)[Grid subsection] (Plane heading)",
+	"path_command_help":				"Usage: |path (Grid X marker)(Grid Y marker)[Grid subsection] (Plane heading)",
 
-	"plane_path_width_km":			0.1,
-	"plane_path_color":				"rgba(255, 255, 255, 192)",
-	"fast_parachute_path_width_km":	1.4,
-	"fast_parachute_path_color":	"rgba(229, 98, 98, 48)",
-	"slow_parachute_path_width_km": 3,
-	"slow_parachute_path_color":	"rgba(239, 233, 110, 24)"
+	"plane_path_width_km":				0.1,
+	"plane_path_color":					"rgba(255, 255, 255, 192)",
+	"short_parachute_path_width_km":	1.4,
+	"short_parachute_path_color":		"rgba(229, 98, 98, 48)",
+	"long_parachute_path_width_km": 	3,
+	"long_parachute_path_color":		"rgba(239, 233, 110, 24)"
 }
